syntax = "proto2";

package ca.mrt.dashboard_persistence.api;

option java_package = "ca.mrt.dashboard_persistence.api";
option java_outer_classname = "DashboardProto";
option java_multiple_files = true;

import "yamcs/api/annotations.proto";
import "yamcs/api/httpbody.proto";
import "google/protobuf/empty.proto";

service DashboardApi {

  option (yamcs.api.label) = "DashboardsAPI";
  // Retrieves all dashboards
  rpc GetAllDashboards(google.protobuf.Empty) returns (yamcs.api.HttpBody) {
    option (yamcs.api.route) = {
      get: "/api/dashboards"
    };
  }

  rpc SaveDashboard(SaveDashboardRequest) returns (google.protobuf.Empty)  {
    option (yamcs.api.route) = {
      post: "/api/dashboards"
      body: "*"
    };
  }

  rpc DeleteDashboard(GetDashboardRequest) returns (google.protobuf.Empty)  {
    option (yamcs.api.route) = {
      delete: "/api/dashboards/{dashboardPath}"
    };
  }

  rpc UpdateDashboard(UpdateDashboardRequest) returns (yamcs.api.HttpBody)  {
    option (yamcs.api.route) = {
      put: "/api/dashboards/dashboard"
      body: "*"
    };
  }

  rpc GetDashboard(GetDashboardRequest) returns (yamcs.api.HttpBody) {
    option (yamcs.api.route) = {
      get: "/api/dashboards/{dashboardPath}"
    };
  }

}

message GetDashboardRequest {
  required string dashboardPath = 1;
}

message SaveDashboardRequest {
  required Dashboard dashboard = 1;
}

message UpdateDashboardRequest {
  required Dashboard dashboard = 1;
  required string oldPath = 2;
}

// Schemas
message Dashboard {
  required string icon_name = 1;
  required string name = 2;
  required string path = 3;
  repeated Card layout = 4;
}


message Card {
  required int32 x = 1;
  required int32 y = 2;
  required int32 w = 3;
  required int32 h = 4;
  required string i = 5;
  required string config = 6;
}
